--- a/src/MsBuildPipeLogger.Server/MsBuildPipeLogger.Server.csproj
+++ b/src/MsBuildPipeLogger.Server/MsBuildPipeLogger.Server.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.5</TargetFramework>
+    <RootNamespace>MsBuildPipeLogger</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Build" Version="15.3.409" />
