--- a/src/MsBuildPipeLogger.Logger/MsBuildPipeLogger.Logger.csproj
+++ b/src/MsBuildPipeLogger.Logger/MsBuildPipeLogger.Logger.csproj
@@ -13,6 +13,9 @@
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>MsBuildPipeLogger.Logger.Tests</_Parameter1>
     </AssemblyAttribute>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>MsBuildPipeLogger.Tests.Client</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
 
 </Project>
