--- a/src/MsBuildPipeLogger.Server/MsBuildPipeLogger.Server.csproj
+++ b/src/MsBuildPipeLogger.Server/MsBuildPipeLogger.Server.csproj
@@ -14,5 +14,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Build" Version="15.3.409" />
   </ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>MsBuildPipeLogger.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 
 </Project>
