--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,9 @@ branches:
   only:
     - master
 
-image: Visual Studio 2017
+image:
+  - Visual Studio 2017
+  - Ubuntu
     
 environment:
   MYGET_KEY:
