--- a/src/MsBuildPipeLogger.Logger/MsBuildPipeLogger.Logger.csproj
+++ b/src/MsBuildPipeLogger.Logger/MsBuildPipeLogger.Logger.csproj
@@ -9,7 +9,7 @@
     <Description>A logger for MSBuild that sends event data over anonymous or named pipes.</Description>
     <PackageProjectUrl>https://msbuildpipelogger.netlify.com/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/daveaglick/MsBuildPipeLogger.git</RepositoryUrl>
-    <PackageLicenseUrl>https://github.com/daveaglick/MsBuildPipeLogger/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Build" Version="14.3.0" PrivateAssets="All" />
